fix the wrong readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,6 +33,6 @@ devtools::install_github("clsong/ReproduceMetaCap")
 ## Reproduce
 The main figures can be reproduced simply by running *plot_figure_Number*. For example, figure 3 can be reproduced as
 ```{r dpi=300, warning=F, message=F}
-library(ReproduceChickenEgg)
+library(ReproduceMetaCap)
 plot_figure_3()
 ```
